# beeware-python-playground

./: Dockerfile  Dockerfile-dev  README.md  docker-compose-dev.yml  docker-compose.yml  pyproject.toml
beeware_playground/: __init__.py  app.py
beeware_playground.dist-info/: METADATA  top_level.txt
docs/: beeware_playground.rst  conf.py  index.rst  modules.rst
tests/: hello_world_test.py
